kubernetes-deployment/app-webtv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
spec:
  selector:
    matchLabels:
      app: $APP_NAME
  replicas: 1
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - name: $APP_NAME
          image: rg.fr-par.scw.cloud/empreinte/$APP_NAME:$CI_COMMIT_REF_NAME
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "2048Mi"
              cpu: "1500m"
      imagePullSecrets:
        - name: registry-scw-cred

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
  labels:
    name: $APP_NAME
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: $APP_NAME
