kubernetes-deployment/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $client_name-$APP_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: $BO_INGRESS
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: $APP_NAME
              port:
                number: 80
